--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,14 +6,11 @@ main:
   - title: "Publications"
     url: "/#publications"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+  - title: "Projects"
+    url: "/#projects"
 
   - title: "Educations"
     url: "/#-educations"
-
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
 
   - title: "Internships"
     url: "/#-internships"
