--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: "/#projects"
 
   - title: "Educations"
-    url: "/#-educations"
+    url: "/#educations"
 
-  - title: "Internships"
-    url: "/#-internships"
+  - title: "Blogs"
+    url: "/#blogs"
